# skyrim-click-casting

./: .gitignore  CMakeLists.txt  ClickCast.cpp  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: ClickCast.cpp  ClickCast.h  PCH.h  main.cpp
